--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -6,6 +6,10 @@
         
         min-width: 55vw;
         margin: 5vh 2px 8vh 2px;
+        
+        }
+        h4{
+            align-self: center;
         }
     }
 /* On screens that are above 670 */
