--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -29,6 +29,14 @@
         </mat-form-field>
         <button mat-flat-button type="submit" color='accent' class="__auth-submit-button">S'enregistrer</button>
 
+        <!-- <div class="alert alert-warning" *ngIf="f.submitted && isSignUpFailed">
+            L'inscription a échoué !<br />{{ errorMessage }}
+        </div> -->
+
     </form>
+
+    <!-- <div class="alert alert-success" *ngIf="isSuccessful">
+        Inscription réussie !
+    </div> -->
 
 </div>
