--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -28,5 +28,11 @@
                 <router-outlet></router-outlet>
             </div>
         </div>
+        <button
+        mat-flat-button
+        color="primary"
+        (click)="logout()">
+            test logout
+        </button>
     </div>
 </div>
