--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,5 @@
-<div class="__dashboard-container">
+<div class="__dashboard-container" *ngIf="isLoggedIn; else loggedOut">
+  <!-- loggedOut en référence au #loggedOut plus bas -->
   
   
     <div class="__sidebar-content mat-elevation-z5" mode="side" #drawer  fxShow="true" fxHide.lt-md="true" >
@@ -74,8 +75,8 @@
         
         <div class="__end-toolbar-block">
           <div class="__identity" fxHide.lt-sm="true">
-            <div class="__nom-u">Luke</div>
-            <div class="__poste-u">Manager</div>
+            <div class="__nom-u">{{currentUser.username}}</div>
+            <!-- <div class="__poste-u">{{currentUser.roles}}</div> -->
           </div>
   
           <button mat-icon-button 
@@ -98,6 +99,9 @@
     
 </div>
 
+<ng-template #loggedOut>
+  Veuillez vous connecter.
+</ng-template>
 
 
 
