--- a/src/app/dashboard/products/products.component.html
+++ b/src/app/dashboard/products/products.component.html
@@ -12,3 +12,12 @@
   class="__main-toolbar-button bg-indigo"><mat-icon>filter_list</mat-icon><span></span> Trier</button>
 
 </div>
+<div class="__product-list">
+  <ul class="list-group">
+    <li
+    class="list-group-item"
+    
+    >
+    </li>
+  </ul>
+</div>
