--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -21,18 +21,18 @@
             routerLinkActive="active"
             (click)="toRegister()">S'inscrire</a> -->
         </div>
-        <div class="row">
+        <div>
 
-            <div class="col-md-10 offset-md-1"><!--"__auth-block"-->
+            <div><!--"__auth-block"-->
     
                 <router-outlet></router-outlet>
             </div>
         </div>
-        <button
+        <!-- <button
         mat-flat-button
         color="primary"
         (click)="logout()">
             test logout
-        </button>
+        </button> -->
     </div>
 </div>
