--- a/src/app/auth/auth.component.scss
+++ b/src/app/auth/auth.component.scss
@@ -1,10 +1,12 @@
 .__main-container {
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
+        
     justify-content: center;
     align-items: center;
     background-image: url('../../assets/images/back_12.jpg');
     background-size: cover;
+
     .active{
         background-color: yellow;
     }
@@ -13,6 +15,7 @@
     }
     .__auth-container{
         display: flex;
+        
         flex-direction: column;
         align-items: center;
         border: 2px solid white;
