--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -73,7 +73,7 @@
     </div>
     <!-- right side -->
     <div class="__right-container">
-      <mat-toolbar class="__main-header">
+      <!-- <mat-toolbar class="__main-header">
         <button mat-flat-button 
           class="__close-button-toolbar" 
           (click)="onToggleSidenav()"
@@ -87,7 +87,6 @@
         <div class="__end-toolbar-block">
           <div class="__identity" fxHide.lt-sm="true">
             <div class="__nom-u">{{currentUser.username}}</div>
-            <!-- <div class="__poste-u">{{currentUser.roles}}</div> -->
           </div>
   
           <button mat-icon-button 
@@ -102,7 +101,7 @@
 
         </div>
 
-      </mat-toolbar>
+      </mat-toolbar> -->
 
       <router-outlet></router-outlet>
       
