--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -39,7 +39,7 @@ a {
     // justify-content: space-between;
     background-color: rgb(42, 55, 61);
     width: 250px;
-    height: 100vh;
+    min-height: 100vh;
   }
   .__list-options{
     color: black;
