--- a/src/app/dashboard/products/product-adding/product-adding.component.html
+++ b/src/app/dashboard/products/product-adding/product-adding.component.html
@@ -1,5 +1,5 @@
 
-<div style="width: 400px; margin: auto;">
+<div class="__adding-screen" style="width: 400px; margin: auto;">
     <div class="submit-form">
       <div *ngIf="!submitted">
         <div class="form-group">
